force-app/main/default/objects/Employee__c/fields/NickName__c.field-meta.xml
<CustomField>
    <fullName>NickName__c</fullName>
    <label>NickName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>