force-app/main/default/objects/Employee__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>